--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <i class="fa-brands fa-github"></i>
     </a>
 
-    <a href="mailto:bennett.alyssa@gmail.com">
+    <a href="mailto:alyssa@alyssabennett.dev">
       <i class="fa-solid fa-envelope"></i>
     </a>
   </div>
