--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 
 <html>
+  <Title>Alyssa Bennett</Title>
+  
   <head>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
