--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
 
 <html>
-  <Title>Alyssa Bennett</Title>
-  
   <head>
+    <Title>Alyssa Bennett</Title>
+    <meta charset="UTF-8" /
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   </head>
 
   <body>
     <h1>Alyssa Bennett</h1>
-    <h3>Passion • Innovation • Sustainability</h3>    
+    <h2>Passion • Innovation • Sustainability</h2>    
 
   <div class="social-buttons">
     <a href="https://www.linkedin.com/in/alyssakbennett" target="_blank">
@@ -26,6 +27,8 @@
     </a>
   </div>
 
-    
+  <div class="image">
+      <img src="images/websitebackground.jpg">
+  </div> 
   </body>
 </html>
